--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "experimentalDecorators": true,
+    "useDefineForClassFields": false,
     "baseUrl": "frontend",
     "paths": {
       "Frontend/*": [
